--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,7 @@
 ---
 title: Justin Liu
 about:
-  template: trestles
-  image: img/pfp.png
-  image-shape: round
+  template: solana
   links:
     - icon: github
       text: Github
@@ -13,35 +11,80 @@ about:
       href: mailto:justintliu@ucsb.edu
 ---
 
-## About Me
+```{r, include=FALSE}
+library(kableExtra)
 
--   **Education:**
-    -   [*Waseda University*](https://www.waseda.jp/top/en/)*:* study abroad (current)
-    -   [*UCSB*](https://www.ucsb.edu/): Statistics & Data Science major and Linguistics minor (Speech & Technologies Emphasis)
-    -   [*IB Program*](https://www.ibo.org/programmes/diploma-programme/): one of the most rigorous high school curriculums in the world (Psychology Extended Essay on Second Language Acquisition)
--   **Interests:** data analysis & visualization, music, Japanese
+python_text <- function() text_spec("Python", color = "green")
+r_text <- function() text_spec("R", color = "#ff9600")
+sql_text <- function() text_spec("SQL", color = "#5bb0ff")
+java_text <- function() text_spec("Java", color = "red")
+html_css_text <- function() text_spec("HTML/CSS", color = "#f266ff")
+```
+
+I enjoy creating data visualizations, making concepts intuitive through teaching, learning Japanese, and listening to music.
+
+## Education
+
+[**Waseda University**](https://www.waseda.jp/top/en/) **(current)**
+
+-   One-year study abroad immersion program (English & Japanese)
+
+[**UCSB**](https://www.ucsb.edu/)
+
+-   Major in Statistics & Data Science
+
+-   Minor in Linguistics (Speech & Technologies Emphasis)
+
+[**IB Program**](https://www.ibo.org/programmes/diploma-programme/)
+
+-   Rigorous high school curriculum
+
+-   Psychology Extended Essay on Second Language Acquisition
 
 ## Experience
 
--   **Undergraduate Learning Assistant** \| PSTAT & CS Departments \@ UCSB
-    -   *Classes supervised:* Data Science Principles (R/SQL) & Introduction to Data Science (Python)
--   **Sponsored Capstone Member** \| [MOVE Lab](http://move.geog.ucsb.edu/) \@ UCSB
-    -   *Topic:* Understanding and Modeling Human Mobility Response to California Wildfires
--   **Undergraduate Research Assistant** \| [CPLS Lab](https://ucsb-cpls-lab.github.io/) \@ UCSB
-    -   *Topic:* Stimuli Redesign for Spanish Proto-lexicon Experiments
--   **Undergraduate Research Assistant** \| Education Department \@ UCSB
-    -   *Topic:* Underrepresented Minority Music Students at California Community Colleges
--   **Notetaker** \| Disabled Students Program \@ UCSB
-    -   *Classes:* Programming for Linguists & Computational Linguistics
--   **Tutor** \| [AVID Program](https://www.avid.org/)
+**10/2023 - present \| `r text_spec("Data Science Intern", color = "#5bb0ff")` \| [Manzanita](https://www.mnzt.io/)**
+
+-   Using NLP & machine learning to better understand consumer psychology
+
+**09/2022 - 06/2023 \| `r text_spec("Undergraduate Learning Assistant", color = "#5bb0ff")` \| [PSTAT](https://www.pstat.ucsb.edu/) & [CS Departments](https://cs.ucsb.edu/) \@ UCSB**
+
+-   Provided support for students taking introductory classes in Python, R, and SQL
+
+**01/2023 - 06/2023 \| `r text_spec("Sponsored Capstone Member", color = "#5bb0ff")` \| [MOVE Lab](http://move.geog.ucsb.edu/) \@ UCSB**
+
+-   Investigated the impact of Lake Fire (2020) on human movement through spatial data science
+
+**01/2023 - 06/2023 \| `r text_spec("Undergraduate Research Assistant", color = "#5bb0ff")` \| [CPLS Lab](https://ucsb-cpls-lab.github.io/) \@ UCSB**
+
+-   Redesigned Spanish language stimuli using Python and language tools for a linguistics study
+
+**01/2022 - 08/2022 \| `r text_spec("Undergraduate Research Assistant", color = "#5bb0ff")` \| [Education Department](https://education.ucsb.edu/academic-programs/dept-of-education/overview) \@ UCSB**
+
+-   Assisted PhD student’s research on the effects of participative music experiences on the sense of belonging and persistence of California transfer students
+
+**09/2021 - 03/2022 \| `r text_spec("Notetaker", color = "#5bb0ff")` \| [Disabled Students Program](https://dsp.sa.ucsb.edu/) \@ UCSB**
+
+-   Took comprehensive notes on computational linguistics lectures for students with disabilities
+
+**08/2018 - 06/2019 \| `r text_spec("Tutor", color = "#5bb0ff")` \| [AVID Program](https://www.avid.org/)**
+
+-   Led homework sessions for students struggling in algebra and geometry
 
 ## Technical Skills
 
--   **Languages:** R, Python, SQL, HTML/CSS
--   **Libraries:** Shiny, ggplot2, tidyverse, tidymodels, Leaflet, NumPy, Pandas, Seaborn, Matplotlib, Altair, Scikit-learn, PySpark, Tensorflow, spaCy
--   **Developer Tools:** RStudio, Jupyter, VS Code, Git/GitHub, Google Cloud Platform
--   **Other:** Qualtrics, Google Workspace, Slack
+**Languages & Libraries:**
 
-## Credit
+-   `r python_text()` (pandas, NumPy, Seaborn, Matplotlib, Altair, scikit-learn, PySpark, PyTorch, Tensorflow)
+-   `r r_text()` (Shiny, ggplot2, tidyverse, tidymodels, Leaflet)
+-   `r sql_text()`
+-   `r html_css_text()`
+-   `r java_text()`
 
--   Profile picture by [ぬくぬくにぎりめし](https://potofu.me/nknkngrms)
+**Developer Tools:**
+
+-   RStudio
+-   Jupyter
+-   VS Code
+-   Git/GitHub
+-   Quarto (what this website is built on)
