--- a/files/ds-salaries.ipynb
+++ b/files/ds-salaries.ipynb
@@ -1,6 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "raw",
+      "metadata": {},
+      "source": [
+        "---\n",
+        "format: \n",
+        "  html:\n",
+        "    code-fold: show\n",
+        "    code-tools: true\n",
+        "---"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1164,6 +1176,7 @@
       "metadata": {},
       "source": [
         "Here is a summary of the steps that we took to get the cleaned dataset above:\n",
+        "\n",
         "- We dropped some redundant variables.\n",
         "  - We dropped `salary` and `salary_currency` since they were used to calculate `salary_in_usd`.\n",
         "  - We also dropped `employee_residence` since it is very similar to `company_location`.\n",
@@ -1472,6 +1485,7 @@
       "metadata": {},
       "source": [
         "There are some comparably high correlations above:\n",
+        "\n",
         "- `company_location` to `salary_in_usd` (0.35)\n",
         "- `experience_level` to `salary_in_usd` (0.3)\n",
         "- `company_location` to `work_year` (0.21)"
@@ -2576,6 +2590,7 @@
       "metadata": {},
       "source": [
         "Based on the coefficient estimates, it appears that experience level, company location, job category, and to some extent employment type have the most significant effects on salaries. For example:\n",
+        "\n",
         "- Having a executive-level or senior-level position can lead to a salary increase of \\$83,323.78 and \\$51,495.87, respectively.\n",
         "- If the company is located in the United States, then the salary is predicted to increase by \\$47,530.45.\n",
         "- Working in a data management job can increase one's salary by \\$45,648.72.\n",
