--- a/projects/capstone/index.qmd
+++ b/projects/capstone/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Understanding and Modeling Human Mobility Response to California Wildfires"
+description: "Capstone project on the effects of Lake Fire (2020) on human movement"
 categories: [R, Research]
 image: img/poi-visits.png
 draft: false
