--- a/projects/zipfinder/index.qmd
+++ b/projects/zipfinder/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Zipfinder"
+description: "App for getting randomized location recommendations based on a city or zip code"
 categories: [Python, Web Development]
 image: img/zipfinder.png
 draft: false
