--- a/projects/country-clusters/index.qmd
+++ b/projects/country-clusters/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Clustering Analysis on Country Data"
 description: "Vignette on implementing clustering methods (hierarchical, model-based, density-based) using unlabeled country data"
-categories: [R]
+categories: [R, ML]
 image: img/map-clusters.png
 draft: false
 ---
