Change "Links" to "Link"

--- a/projects/activity-rate/index.qmd
+++ b/projects/activity-rate/index.qmd
@@ -6,6 +6,6 @@ image: img/activity-rate-forecast.png
 draft: false
 ---
 
-## Links
+## Link
 
 -   [Report](../../files/forecasting-activity-rates.html)
