Update subtitle in sentence similarity code

--- a/notebooks/sentence-similarity.ipynb
+++ b/notebooks/sentence-similarity.ipynb
@@ -673,7 +673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Building sentence similarity models that were *not* pretrained on this task"
+    "### Fine-tuning BERT models that were *not* pretrained on sentence similarity tasks"
    ]
   },
   {
